more spacing fixes

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -166,11 +166,11 @@ team
 
 
 .mem-name {
-  margin: 2.5em 0em 0.75em 0em;
+  margin: 2.5em 0em 0em 0em;
 }
 
 .mem-position {
-  margin: 0.75em 0em 0.75em 0em;
+  margin: 0.75em 0em 0.25em 0em;
 }
 
 
